--- a/car_product/app_overlays/car-ui-customizations/res/layout/car_ui_preference_two_action_text.xml
+++ b/car_product/app_overlays/car-ui-customizations/res/layout/car_ui_preference_two_action_text.xml
@@ -59,7 +59,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="viewStart"
-                    android:singleLine="true"
+                    android:ellipsize="end"
+                    android:maxLines="2"
                     android:textAppearance="@style/TextAppearance.CarUi.PreferenceTitle"/>
 
                 <com.android.car.ui.uxr.DrawableStateTextView
