--- a/service/res/values/overlayable.xml
+++ b/service/res/values/overlayable.xml
@@ -113,6 +113,7 @@
           <item type="integer" name="config_oemCarService_serviceReady_timeout_ms"/>
           <item type="integer" name="config_oemCarService_regularCall_timeout_ms"/>
           <item type="integer" name="config_oemCarService_crashCall_timeout_ms"/>
+          <item type="integer" name="config_oemCarService_thread_pool_size"/>
           <!-- Params from config.xml that can be overlaid -->
 
           <!-- XML files that can be overlaid -->
