--- a/car_product/app_overlays/car-ui-customizations/res/layout/car_ui_preference_two_action_text.xml
+++ b/car_product/app_overlays/car-ui-customizations/res/layout/car_ui_preference_two_action_text.xml
@@ -34,7 +34,7 @@
         android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">
 
         <RelativeLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <com.android.car.ui.uxr.DrawableStateImageView
