Fix RtL for FooterPreference
Bug: 262397420
Test: Manual

Change-Id: I8c804c75e5a407703b235f92360036f6c466a276

--- a/car_product/app_overlays/car-ui-customizations/res/layout/car_ui_preference_footer.xml
+++ b/car_product/app_overlays/car-ui-customizations/res/layout/car_ui_preference_footer.xml
@@ -20,7 +20,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:gravity="left"
+    android:gravity="start"
     android:clipToPadding="false"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
@@ -30,7 +30,7 @@
     <com.android.car.ui.uxr.DrawableStateLinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         android:orientation="horizontal">
 
         <com.android.car.ui.uxr.DrawableStateImageView
